[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "google-authz-client"
version = "0.6.1"
description = "Python helpers for talking to the google-authz service from popular web frameworks."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "google-authz team" }
]
dependencies = [
  "httpx>=0.25",
  "pydantic>=1.10,<3",
  "typing_extensions>=4.7",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Framework :: FastAPI",
  "Framework :: Flask",
  "Framework :: Django",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.95", "starlette>=0.27"]
flask = ["flask>=2.3"]
django = ["django>=4.2"]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.21",
  "httpx>=0.25",
  "respx>=0.20.2",
  "mypy>=1.4",
  "ruff>=0.1.8",
]

[project.urls]
Homepage = "https://github.com/example/google-authz-client"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
strict = false
plugins = []
files = "src"
